# av1-base

./: Cargo.toml  DEPLOY.md  av1_super_daemon_full_plan.md  config.toml  encoding_flow.md
.kiro/specs/av1-super-daemon/: design.md  requirements.md  tasks.md
crates/cli-daemon/: Cargo.toml
crates/cli-daemon/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs  lib.rs
crates/daemon/: Cargo.toml
crates/daemon/proptest-regressions/: classify.txt
crates/daemon/src/: classify.rs  concurrency.rs  daemon.rs  gates.rs  job_executor.rs  jobs.rs  lib.rs  metrics.rs  metrics_server.rs  replace.rs  scan.rs  size_gate.rs  skip_marker.rs  stability.rs  startup.rs
crates/daemon/src/encode/: av1an.rs  mod.rs
crates/tui/: Cargo.toml
crates/tui/src/: main.rs
scripts/: av1an-docker  cleanup_local_encoders.sh  deploy.sh  ffmpeg-docker  ffprobe-docker  install_ffmpeg8.sh  setup_docker_encoding.sh
