[package]
name = "av1-dashboard"
version.workspace = true
edition.workspace = true

[[bin]]
name = "atop"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
proptest = "1.4"
